feat(doc-automation): optimization classes and changes